# opentelemetry-rust

./: massif.hundred_log  massif.one_log  massif.sh
examples/batch-processor/: Cargo.toml
examples/batch-processor/benches/: bench.rs
examples/batch-processor/src/: main.rs
examples/issue-2673/: Cargo.toml
examples/issue-2673/src/: main.rs
examples/logs-basic/src/: main.rs
opentelemetry-appender-tracing/src/: layer.rs
opentelemetry-sdk/src/: error.rs
opentelemetry-sdk/src/logs/: logger_provider.rs  record.rs
