[package]
name = "batch-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry_sdk = { path = "../../opentelemetry-sdk", features = ["logs", "testing"] }
opentelemetry-appender-tracing = { path = "../../opentelemetry-appender-tracing", default-features = false}
tracing = { workspace = true, features = ["std"]}
tracing-subscriber = { workspace = true, features = ["registry", "std"] }
opentelemetry-stdout = { path = "../../opentelemetry-stdout", features = ["logs"] }

[dev-dependencies]
criterion = { version = "0.5", features =  ["html_reports"] }

[[bench]]
name = "bench"
harness = false
