[package]
name = "issue-2673"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
opentelemetry = { path = "../../opentelemetry", feature = ["trace"], optional = true }
opentelemetry_sdk = { path = "../../opentelemetry-sdk", features = ["spec_unstable_metrics_views", "rt-tokio", "metrics"] }
opentelemetry-stdout = { workspace = true, optional = true }
opentelemetry-appender-tracing = { path = "../../opentelemetry-appender-tracing", optional = true }
opentelemetry-otlp = { path = "../../opentelemetry-otlp", features = ["http-json", "reqwest-client"], optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["std", "env-filter", "fmt", "registry"], optional = true }
tracing-attributes = { version = "0.1.24", optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[lints]
workspace = true
